syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hotel.performance.grpc";
option java_outer_classname = "HotelProto";

service HotelServiceGrpc {
  rpc CreateReservation (CreateReservationRequest) returns (ReservationResponse);
  rpc GetReservation (GetReservationRequest) returns (ReservationResponse);
  rpc UpdateReservation (UpdateReservationRequest) returns (ReservationResponse);
  rpc DeleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse);
}

message CreateReservationRequest {
  string dateDebut = 1;
  string dateFin = 2;
  string preferences = 3;
  int64 clientId = 4;
  int64 chambreId = 5;
}

message GetReservationRequest {
  int64 id = 1;
}

message UpdateReservationRequest {
  int64 id = 1;
  string dateDebut = 2;
  string dateFin = 3;
  string preferences = 4;
}

message DeleteReservationRequest {
  int64 id = 1;
}

message DeleteReservationResponse {
  bool success = 1;
}

message ReservationResponse {
  int64 id = 1;
  ClientResponse client = 2;
  ChambreResponse chambre = 3;
  string dateDebut = 4;
  string dateFin = 5;
  string preferences = 6;
}

message ClientResponse {
  int64 id = 1;
  string nom = 2;
  string prenom = 3;
  string email = 4;
  string telephone = 5;
}

message ChambreResponse {
  int64 id = 1;
  string type = 2;
  double prix = 3;
  bool disponible = 4;
}
